external-crates/move/crates/move-compiler/tests/move_check/parser/named_blocks_invalid_3.exp
warning[W09002]: unused variable
  ┌─ tests/move_check/parser/named_blocks_invalid_3.move:3:12
  │
3 │     fun t0(cond: bool): u64 {
  │            ^^^^ Unused parameter 'cond'. Consider removing or prefixing with an underscore: '_cond'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/parser/named_blocks_invalid_3.move:4:9
  │
4 │         'name: {
  │         ^^^^^ Block labels are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/named_blocks_invalid_3.move:4:14
  │
4 │         'name: {
  │              ^
  │              │
  │              Unexpected ':'
  │              Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

error[E04007]: incompatible types
  ┌─ tests/move_check/parser/named_blocks_invalid_3.move:4:14
  │
3 │     fun t0(cond: bool): u64 {
  │                         --- Expected: 'u64'
4 │         'name: {
  │              ^
  │              │
  │              Invalid return expression
  │              Given: '()'

error[E01001]: invalid character
  ┌─ tests/move_check/parser/named_blocks_invalid_3.move:5:32
  │
5 │             if (cond) { return 'name 10 };
  │                                ^^^^^ Unexpected character (')

warning[W09002]: unused variable
   ┌─ tests/move_check/parser/named_blocks_invalid_3.move:10:12
   │
10 │     fun t1(cond: bool): u64 {
   │            ^^^^ Unused parameter 'cond'. Consider removing or prefixing with an underscore: '_cond'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/parser/named_blocks_invalid_3.move:11:14
   │
11 │         loop 'name: {
   │              ^^^^^ Block labels are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E01002]: unexpected token
   ┌─ tests/move_check/parser/named_blocks_invalid_3.move:11:19
   │
11 │         loop 'name: {
   │                   ^
   │                   │
   │                   Unexpected ':'
   │                   Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

error[E04007]: incompatible types
   ┌─ tests/move_check/parser/named_blocks_invalid_3.move:11:19
   │
10 │     fun t1(cond: bool): u64 {
   │                         --- Expected: 'u64'
11 │         loop 'name: {
   │                   ^
   │                   │
   │                   Invalid return expression
   │                   Given: '()'

error[E01001]: invalid character
   ┌─ tests/move_check/parser/named_blocks_invalid_3.move:12:31
   │
12 │             if (cond) { break 'name 10 };
   │                               ^^^^^ Unexpected character (')

warning[W09002]: unused variable
   ┌─ tests/move_check/parser/named_blocks_invalid_3.move:16:12
   │
16 │     fun t2(cond: bool): u64 {
   │            ^^^^ Unused parameter 'cond'. Consider removing or prefixing with an underscore: '_cond'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/parser/named_blocks_invalid_3.move:17:14
   │
17 │         loop 'outer: {
   │              ^^^^^^ Block labels are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E01002]: unexpected token
   ┌─ tests/move_check/parser/named_blocks_invalid_3.move:17:20
   │
17 │         loop 'outer: {
   │                    ^
   │                    │
   │                    Unexpected ':'
   │                    Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

error[E04007]: incompatible types
   ┌─ tests/move_check/parser/named_blocks_invalid_3.move:17:20
   │
16 │     fun t2(cond: bool): u64 {
   │                         --- Expected: 'u64'
17 │         loop 'outer: {
   │                    ^
   │                    │
   │                    Invalid return expression
   │                    Given: '()'

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/parser/named_blocks_invalid_3.move:18:18
   │
18 │             loop 'inner: {
   │                  ^^^^^^ Block labels are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E01001]: invalid character
   ┌─ tests/move_check/parser/named_blocks_invalid_3.move:19:35
   │
19 │                 if (cond) { break 'outer 10 };
   │                                   ^^^^^^ Unexpected character (')

error[E01001]: invalid character
   ┌─ tests/move_check/parser/named_blocks_invalid_3.move:20:35
   │
20 │                 if (cond) { break 'inner 20 };
   │                                   ^^^^^^ Unexpected character (')

warning[W09002]: unused variable
   ┌─ tests/move_check/parser/named_blocks_invalid_3.move:25:12
   │
25 │     fun t3(cond: bool) {
   │            ^^^^ Unused parameter 'cond'. Consider removing or prefixing with an underscore: '_cond'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/parser/named_blocks_invalid_3.move:26:22
   │
26 │         while (cond) 'outer: {
   │                      ^^^^^^ Block labels are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E01002]: unexpected token
   ┌─ tests/move_check/parser/named_blocks_invalid_3.move:26:28
   │
26 │         while (cond) 'outer: {
   │                            ^
   │                            │
   │                            Unexpected ':'
   │                            Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/parser/named_blocks_invalid_3.move:27:26
   │
27 │             while (cond) 'inner: {
   │                          ^^^^^^ Block labels are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E01001]: invalid character
   ┌─ tests/move_check/parser/named_blocks_invalid_3.move:28:35
   │
28 │                 if (cond) { break 'outer };
   │                                   ^^^^^^ Unexpected character (')

error[E01001]: invalid character
   ┌─ tests/move_check/parser/named_blocks_invalid_3.move:29:35
   │
29 │                 if (cond) { break 'inner };
   │                                   ^^^^^^ Unexpected character (')

warning[W09002]: unused variable
   ┌─ tests/move_check/parser/named_blocks_invalid_3.move:34:12
   │
34 │     fun t4(cond: bool) {
   │            ^^^^ Unused parameter 'cond'. Consider removing or prefixing with an underscore: '_cond'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/parser/named_blocks_invalid_3.move:35:22
   │
35 │         while (cond) 'outer: {
   │                      ^^^^^^ Block labels are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E01002]: unexpected token
   ┌─ tests/move_check/parser/named_blocks_invalid_3.move:35:28
   │
35 │         while (cond) 'outer: {
   │                            ^
   │                            │
   │                            Unexpected ':'
   │                            Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/parser/named_blocks_invalid_3.move:36:22
   │
36 │             let _x = 'inner: {
   │                      ^^^^^^ Block labels are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E01001]: invalid character
   ┌─ tests/move_check/parser/named_blocks_invalid_3.move:37:35
   │
37 │                 if (cond) { break 'outer };
   │                                   ^^^^^^ Unexpected character (')

error[E01001]: invalid character
   ┌─ tests/move_check/parser/named_blocks_invalid_3.move:38:36
   │
38 │                 if (cond) { return 'inner 10 };
   │                                    ^^^^^^ Unexpected character (')

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/parser/named_blocks_invalid_3.move:45:14
   │
45 │         loop 'l: {
   │              ^^ Block labels are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E01002]: unexpected token
   ┌─ tests/move_check/parser/named_blocks_invalid_3.move:45:16
   │
45 │         loop 'l: {
   │                ^
   │                │
   │                Unexpected ':'
   │                Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

error[E13001]: feature is not supported in specified edition
   ┌─ tests/move_check/parser/named_blocks_invalid_3.move:46:18
   │
46 │             loop 'l: {
   │                  ^^ Block labels are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
   │
   = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E01001]: invalid character
   ┌─ tests/move_check/parser/named_blocks_invalid_3.move:47:23
   │
47 │                 break 'l
   │                       ^^ Unexpected character (')

